client/src/assets/css/welcome.css
/* ... */
.mhacks-last-contact-header {
  font-family: 'Muli', sans-serif;
  font-size: 4em;
  font-weight: 300;
  text-align: center;
  padding-top: 2%;
}

.mhacks-last-contact-input {
  border: 1px solid #283149;
  width: 80%;
  padding: 12px;
  color: #283149;
  font-family: 'Muli', sans-serif;
  font-size: 1.2em;
  font-weight: 200;
  border-radius: .375rem;
  margin-bottom: 5%;
}

.mhacks-last-contact-textarea {
  border: 1px solid #283149;
  width: 80%;
  padding: 12px;
  color: #8e8e8e;
  font-family: 'Muli', sans-serif;
  font-size: 1.2em;
  font-weight: 200;
  border-radius: .375rem;
  margin-bottom: 5%;
  resize: none;
}

.mhacks-last-contact-btn {
  font-family: 'Muli', sans-serif;
  font-size: 1.2em;
  font-weight: 200;
  border-radius: .375rem;
  margin-bottom: 5%;
  background-color: #283149;
  color: #fff;
  width: 80%;
  height: 50px;
  text-align: center;
  padding: 12px;
}

.mhacks-last-contact-input-header {
  font-family: 'Muli', sans-serif;
  font-size: 1.2em;
  font-weight: 200;
  color: #283149;
  margin-bottom: 2%;
}

.mhacks-last-contact-input-bg {
  background-image: url('../images/mailvect.svg');
  background-repeat: no-repeat;
  width: 100%;
  height: 500px;
  background-position-x: 100%;
}

.mhacks-last-footer-bg {
  margin-top: 5%;
  background-image: url('../images/btmvect.svg');
  background-repeat: no-repeat;
  width: 100%;
  height: 200px;
}

.mhacks-footer-social-media-icons{
  width: 60px;
  height: 60px;
  margin-top: 10vh;
  margin-left: 7px;
  cursor: pointer;
}

.contactus-section{
  margin-bottom: 10vh;
}

.mhacks-footer-row{
  height: 100%;
}

.mhacks-footer-community, .mhacks-footer-title{
  margin-top: 8vh;
  font-size: 1.5em;
}

.mhacks-footer-community, .mhacks-footer-policies{
  margin-left: 16vw;
  margin-bottom: .7vh;
}

.mhacks-footer-content, .mhacks-footer-policies{
  font-weight: 100;
  line-height: 1.7em;
  font-size: 1.1em;
}

.mhacks-footer{
  width: 100%;
  overflow: hidden;
  background-color: #283149;
  color: #fff;
  height: 220px;
  padding-left: 12vw;
}

/* Media Queries */
@media only screen and (max-width: 1537px){
  .contact-btn{
    margin-right: 12vw;
  }
  .logo{
    height: 358px;
    margin-top: -8vw;
  }
  .mhacks-top-header{
    margin-top: -5%;
  }
  .mhacks-tn-right-item{
    display: none;
  }
  .business-btn{
    margin-right: -3vw;
  }
  .about-btn{
    margin-right: -2vw;
  }
  .students-btn{
    margin-right: -2vw;
  }
  .mhacks-top-header{
    font-size: 3.7em;
  }
  .mhacks-mid-mission-content{
    margin-left: 10%;
    width: 524px;
  }
  .mhacks-mid-mission-sec-bg{
    width: 1101px;
    float: right;
    height: 850px;
  }
  .mhacks-mid-team-header{
    margin-top: -19%;
  }
  .mhacks-register-btn, .mhacks-hire-btn{
    font-size: 0.85em;
  }
}
@media only screen and (max-width: 1467px){
  .students-btn{
    margin-right: -1vw;
  }
  .about-btn{
    margin-right: -1vw;
  }
  .contact-btn{
    margin-right: 17vw;
  }
  .business-btn{
    margin-right: -1vw;
  }
  .mhacks-top-header{
    font-size: 3.5em;
  }
}
/* Laptop screens(upto 1400 px) */
@media only screen and (max-width: 1400px){
  .mhacks-tn-left-logo {
    padding: 15px 10px;
    padding-top: 16px;
  }
  
  .mhacks-tn-left-logo a {
    padding: 15px 10px;
    padding-top: 16px;
  }
  
  .mhacks-tn-right-item {
    padding: 15px 10px;
    margin-left: -16vw;
    margin-right: 16vw;
  }
  
  .mhacks-tn-right-item a {
    padding: 15px 10px;
  }
  
  .mhacks-tn-right-item a:hover {
    padding: 15px 10px;
  }

  .mhacks-top-bg{
    height: 700px;
  }

  .mhacks-top-header{
    font-size: 3.4em;
    margin-top: -5%;
  }

  .mhacks-top-para{
    font-size: 1.7em;
  }

  .mhacks-top-btn{
    font-size: 1.3em;
    width: 155px;
    height: 48px;
  }

  .mhacks-mid-bg, .mhacks-mid-bg-business{
    height: 130px;
  }

  .mhacks-mid-bg-business{
    margin-top: 6%;
  }

  .mhacks-mid-header{
    font-size: 3em;
    padding-top: 3%;
  }

  .mhacks-mid-header-business{
    font-size: 3em;
    padding-top: 3%;
    padding-right: 25%;
  }

  .mhacks-mid-ft{
    height: 520px;
  }

  .mhacks-mid-ft-content{
    height: 130px;
  }

  .mhacks-mid-ft-text{
    font-size: 3.1em;
    padding-left: -26%;
    padding-top: 7%;
  }
  
  /* .mhacks-mid-container{
    margin-left: 6%;
  } */

  .mhacks-mid-mission-text{
    font-size: 3.1em;
  }

  .mhacks-mid-mission-bg{
    height: 140px;
  }

  .mhacks-mid-mission-sec-bg{
    width: 1100px;
    float: right;
    margin-right: -2vw;
  }

  .mhacks-mid-mission-content{
    margin-top: 10%;
    margin-left: 20%;
    font-size: 1.4em;
    line-height: 1.67em;
  }

  .mhacks-mid-ft-list-para, .mhacks-mid-ft-list-name, .mhacks-mid-ft-list-two-para{
    font-size: 1.4em;
  }

  .mhacks-mid-team-header{
    font-size: 3.1em;
  }

  .mhacks-mid-team-card{
    margin-top: -10%;
  }

  .mhacks-last-contact-bg{
    height: 110px;
  }

  .mhacks-last-contact-header{
    font-size: 3.1em;
  }

  .mhacks-last-contact-input, .mhacks-last-contact-textarea{
    font-size: 1em;
    padding: 8px;
  }

  .mhacks-last-contact-btn{
    height: 40px;
    font-size: 1.1em;
    padding: 8px;
    font-weight: bold;
  }

  .mhacks-last-contact-input-bg{
    height: 450px;
  }

  .mhacks-last-footer-bg{
    height: 150px;
  }

  .mhacks-last-contact-input {
    width: 60%;
    margin-left: 0.6vw;
  }
  
  .mhacks-last-contact-textarea {
    width: 60%;
    margin-left: 0.6vw;
  }
  
  .mhacks-last-contact-btn {
    width: 60%;
    height: 40px;
    margin-left: 0.6vw;
  }
}

@media only screen and (max-width: 1330px){
  .mhacks-tn-right-item{
    margin-left: -24vw;
    margin-right: 24vw;
  }

  .mhacks-top-header{
    font-size: 3.3em;
  }

  .mhacks-top-para{
    font-size: 1.6em;
  }

}
/* ... */

